scotia-peru-aks/viya/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-model-manager/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-modelManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-management
    sas.com/admin: namespace
  name: sas-model-management
spec:
  host: $(INGRESS_HOST)
  path: /modelManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-model-management
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-modelManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-management
    sas.com/admin: namespace
  name: sas-model-management-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /modelManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-model-management
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-modelRepository
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-repository
    sas.com/admin: namespace
  name: sas-model-repository
spec:
  host: $(INGRESS_HOST)
  path: /modelRepository
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-model-repository
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-modelRepository
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-repository
    sas.com/admin: namespace
  name: sas-model-repository-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /modelRepository
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-model-repository
  wildcardPolicy: Subdomain
